# quantum-armor

./: LICENSE  README.md  pyproject.toml  quantum_scan.py  requirements.txt
quantum_armor/: cli.py  scanner.py
quantum_armor.egg-info/: PKG-INFO  SOURCES.txt
quantum_armor/migrators/: algorithms_auto_migator.py  ast_parser.py  auto_migrator.py  backup.py  crypto_shims.py  js_migrator_demo.js  main.py  replacer.py  rsa_to_kyber.py  test_migration.py  web_gui.py
quantum_armor/migrators/backups/20251124T112532Z/: manifest.json
quantum_armor/migrators/backups/20251124T112743Z/: manifest.json  ssh_paramiko.py
quantum_armor/migrators/backups/20251124T112938Z/: legacy_pycryptodome.py  legacy_rsa.py  manifest.json
quantum_armor/migrators/backups/20251124T113302Z/: manifest.json
tests/: legacy_rsa.py
