[build-system]
requires = ["setuptools>=61.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "quantum-armor"
version = "0.1.0"
description = "One-click post-quantum cryptography audit & migration tool"
readme = "README.md"
requires-python = ">=3.8"
license = {text = "MIT"}
authors = [{name = "zencefilperisi"}]
keywords = ["quantum", "cryptography", "security", "pqc", "post-quantum"]

dependencies = [
    "click>=8.0",
]

[project.scripts]
quantum-armor = "quantum_armor.cli:cli"

[tool.setuptools.packages.find]
where = ["."]
include = ["quantum_armor*"]